implemented missing methods and renamed register to create
